# chatgppt

./: .gitattributes  .gitignore  AGENTS.md  README.ko.md  README.md  df140-stepper-text.json  vite.config.ts
deck-scribe-craft-07/: .gitignore  AGENTS.md  package.json  vite.config.test.ts  vite.config.ts
deck-scribe-craft-07/src-tauri/: Cargo.toml  tauri.conf.json
deck-scribe-craft-07/src-tauri/capabilities/: default.json
deck-scribe-craft-07/src-tauri/src/: codex_app_server_protocol.rs  codex_app_server_session.rs  codex_app_server_smoke.rs  codex_app_server_stderr.rs  codex_app_server_structured_turn.rs  codex_cli.rs  codex_cli_error.rs  codex_cli_tests.rs  lib.rs  main.rs  openai_image.rs  project_artifact.rs  redaction.rs
docs/: ai_worker_operating_contract.md  chatgppt_full_architecture.md  codex_ppt_prd.md  codex_ppt_ticket_breakdown.md  df-023a-image-auth-feasibility.md  df154-manual-qa-scenarios.md  df157-packaging-signing-notarization.md  gppt_architecture.md  gppt_project_direction.md  live-image-path-decision.md  live-interruption-matrix.md  live-release-decision.md  live-slide-regeneration.md  live-web-search-evidence.md  live_text_smoke_report.md  mvp-qa-result-templates.md  mvp-qa-run-2026-06-28-current.md  production-clean-machine-runbook.md  project_status_briefing_2026-06-24.md
prompts/: deck_plan_markdown.v1.md  design_system.v1.md  final_report.v1.md  research_plan.v1.md  vectorization_guidance.v1.md
release-artifacts/: DeckForge_0.1.0_aarch64.dmg  DeckForge_0.1.0_aarch64.dmg.sha256  README.md
scripts/: clean-machine-evidence.mjs  (+6 more)
(+1592 files in other folders)
