[package]
name = "deckforge"
version = "0.1.0"
description = "DeckForge desktop shell"
authors = ["DeckForge"]
license = "UNLICENSED"
repository = "https://github.com/sunseol/chatgppt"
edition = "2021"
rust-version = "1.78"

[lib]
name = "deckforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "deckforge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.rust]
non_ascii_idents = "deny"
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
